XSTOUCAN-12: In inline edit mode all the input fields are stretched to the full content width Fixed.
XWIKI-980: EventCalendar generates prev-next links forever
Added styling.


git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk/toucan@8222 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-toucan/src/main/resources/toucan/style.css
+++ b/xwiki-platform-toucan/src/main/resources/toucan/style.css
@@ -441,11 +441,14 @@ ol.ALPHA { list-style-type: upper-alpha; }
 .wiki-calendar-month-nav{
   border: none !important;
 }
-.wiki-calendar-month-nav a{
+.wiki-calendar-month-nav *{
   font-size: 140%;
   font-weight: bold;
   color: #C0D4E7 !important;
   text-decoration: none;
+}
+.wiki-calendar-month-nav .disabled{
+  color: #aaa !important;
 }
 .wiki-calendar-month-nav a:hover{
   text-decoration: none !important;
@@ -2193,8 +2196,7 @@ text-align: center;
 }
 /* panels */
 #panellistaccordion input[type=text],#panellistaccordion textarea,
-#body .panel input[type=text], #body .panel textarea,
-#inline input[type=text],#inline textarea{
+#body .panel input[type=text], #body .panel textarea{
 	background-color: #f9fcff;
 	width:100%;
 }
